@@ -17,7 +17,9 @@ package org.eclipse.core.internal.filesystem.local.nio;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
 import java.nio.file.attribute.BasicFileAttributes;
 import org.eclipse.core.filesystem.EFS;
 import org.eclipse.core.filesystem.IFileInfo;
@@ -35,13 +37,12 @@ public class DefaultHandler extends NativeHandler {
 
 	@Override
 	public FileInfo fetchFileInfo(String fileName) {
-		Path path = Paths.get(fileName);
+		Path path = Path.of(fileName);
 		FileInfo info = new FileInfo();
-		boolean exists = Files.exists(path);
-		info.setExists(exists);
 
 		try {
 			BasicFileAttributes readAttributes = Files.readAttributes(path, BasicFileAttributes.class);
+			info.setExists(true);
 
 			// Even if it doesn't exist then check for symbolic link information.
 			if (readAttributes.isSymbolicLink()) {
@@ -59,13 +60,11 @@ public class DefaultHandler extends NativeHandler {
 			// Since obtaining the real name in such situation is pretty expensive, we use the name
 			// passed as a parameter, which may differ by case from the real name of the file
 			// if the file system is case insensitive.
-			info.setName(path.toFile().getName());
+			info.setName(path.getFileName().toString());
 
 			// Since we will be using a mixture of pre Java 7 API's which do not support the
 			// retrieval of information for the symbolic link itself instead of the target
 			// we will only support the following details if the symbolic link target exists.
-			if (!exists)
-				return info;
 
 			info.setLastModified(readAttributes.lastModifiedTime().toMillis());
 			info.setLength(readAttributes.size());
@@ -73,6 +72,9 @@ public class DefaultHandler extends NativeHandler {
 
 			info.setAttribute(EFS.ATTRIBUTE_READ_ONLY, !Files.isWritable(path) && Files.isReadable(path));
 			info.setAttribute(EFS.ATTRIBUTE_EXECUTABLE, Files.isExecutable(path));
+
+		} catch (NoSuchFileException e) {
+			// file does not exist, which is valid. Continue, FileInfo.exists is false by default.
 		} catch (IOException e) {
 			// Leave alone and continue.
 			info.setError(IFileInfo.IO_ERROR);
